Immutable HashMap fix